# TokyoPythonDjangoWebsite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
home/: admin.py  game.py  index.html  models.py  views.py  views_copy.py
home/migrations/: 0001_initial.py  0002_blogpost_event.py
home/static/home/assets/: index.css
home/templates/home/: about.html  base.html  blog.html  calendar.html  calendar_copy.html  hello.html  index.html
home/templatetags/: dungeon_filters.py
