[project]
name = "tokyopythondjangowebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-allauth>=65.15.0",
]

[dependency-groups]
deploy = [
    "gunicorn>=25.1.0",
    "whitenoise>=6.12.0",
]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "tailwindcss>=0.0.1",
]
